# emscripten-cmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: template-cleanup.yml
